# victron-monitor

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  compile_commands.json  requirements.txt  sdkconfig  sdkconfig.old
components/parser/: CMakeLists.txt  battery.proto  parser.c  parser.h
components/parser/cmake/: FindNanopb.cmake  FindRE2C.cmake
main/: CMakeLists.txt  Kconfig.projbuild  battery.pb-c.c  battery.pb-c.h  battery.proto  hello_world_main.c  main.c  main.cpp
